contractors db init migration

--- a/Services/Contractors/Contractors.API/Contractors.API.csproj
+++ b/Services/Contractors/Contractors.API/Contractors.API.csproj
@@ -1,13 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>95231175-8671-4ea8-aef2-a3270b00b9bc</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\..\..</DockerfileContext>
-    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
+    <!--<UserSecretsId>5929c131-f392-4a36-8e9e-02aeb5d708c9</UserSecretsId>-->
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +12,17 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
+    <PackageReference Include="Polly" Version="7.2.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Contractors.Appilcation\Contractors.Appilcation.csproj" />
+    <ProjectReference Include="..\Contractors.Infrastructure\Contractors.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
+
