--- a/Services/Contractors/Contractors.API/Properties/launchSettings.json
+++ b/Services/Contractors/Contractors.API/Properties/launchSettings.json
@@ -1,6 +1,6 @@
-{
+﻿{
   "profiles": {
-    "Contractors.API.Http": {
+    "http": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
@@ -8,9 +8,9 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5228"
+      "applicationUrl": "http://localhost:5083"
     },
-    "Contractors.API": {
+    "https": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
@@ -27,13 +27,6 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "publishAllPorts": true,
-      "useSSL": true
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
@@ -41,8 +34,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:22423",
-      "sslPort": 44322
+      "applicationUrl": "http://localhost:10492",
+      "sslPort": 44353
     }
   }
 }
