--- a/Services/Contractors/Contractors.API/appsettings.Development.json
+++ b/Services/Contractors/Contractors.API/appsettings.Development.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "ContractorsConnectionString": "Server=localhost,1435;Database=ContractorsDb;User Id=sa;Password=86e81d96-f2a9-45e6-934c-bb41a17534be;TrustServerCertificate=True;"
+  },
   "IdentityServer": "https://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   }
 }
