--- a/Services/Contractors/Contractors.Appilcation/Contractors.Appilcation.csproj
+++ b/Services/Contractors/Contractors.Appilcation/Contractors.Appilcation.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\Contractors.Domain\Contractors.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
