--- a/Services/Contractors/Contractors.Infrastructure/Contractors.Infrastructure.csproj
+++ b/Services/Contractors/Contractors.Infrastructure/Contractors.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Contractors.Appilcation\Contractors.Appilcation.csproj" />
+  </ItemGroup>
+
 </Project>
