--- a/ApiGateways/OcelotApiGw/appsettings.Development.json
+++ b/ApiGateways/OcelotApiGw/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "EmailCredential": {
+    "Address": "erp.system1990@gmail.com",
+    "Password": "yeot zptf odiz gshp"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
