--- a/Services/Identity/Identity/appsettings.json
+++ b/Services/Identity/Identity/appsettings.json
@@ -12,6 +12,10 @@
       "Audience": "erp-client"
     }
   },
+  "EmailCredential": {
+    "Address": "erp.system1990@gmail.com",
+    "Password": "xbuu akzf zigy aomu"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
