--- a/Services/Contractors/Contractors.API/appsettings.json
+++ b/Services/Contractors/Contractors.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ContractorsConnectionString": "Server=contractorsdb;Database=ContractorsDb;User Id=sa;Password=86e81d96-f2a9-45e6-934c-bb41a17534be;TrustServerCertificate=True;"
+    //"ContractorsConnectionString": "Server=contractorsdb;Database=ContractorsDb;User Id=sa;Password=86e81d96-f2a9-45e6-934c-bb41a17534be;TrustServerCertificate=True;"
+    "ContractorsConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=ERP_DB;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "IdentityServer": "https://localhost:5001",
   "Logging": {
