--- a/Services/Contractors/Contractors.API/appsettings.Development.json
+++ b/Services/Contractors/Contractors.API/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
   "ConnectionStrings": {
-    "ContractorsConnectionString": "Server=localhost,1435;Database=ContractorsDb;User Id=sa;Password=86e81d96-f2a9-45e6-934c-bb41a17534be;TrustServerCertificate=True;"
+    //"ContractorsConnectionString": "Server=contractorsdb;Database=ContractorsDb;User Id=sa;Password=86e81d96-f2a9-45e6-934c-bb41a17534be;TrustServerCertificate=True;"
+    "ContractorsConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=ERP_DB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "JwtOptions": {
+      "Secret": "Q!2WE#4rT%6y fd4324mbc9nrewnbasd fp9843",
+      "Issuer": "erp-auth-api",
+      "Audience": "erp-client"
+    }
   },
   "IdentityServer": "https://localhost:5001",
+  "PermissionModuleService": "https://localhost:5000/Company-Users/module-permissions",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
