--- a/Services/Companies/Companies.API/appsettings.json
+++ b/Services/Companies/Companies.API/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     //"CompaniesConnectionString": "Server=Companiesdb;Database=CompaniesDb;User Id=sa;Password=0612ac02-6603-4c53-b9ea-41b9b52d7f9b;TrustServerCertificate=True;"
-    "CompaniesConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=ERP_DB;Trusted_Connection=True;TrustServerCertificate=True"
+    "CompaniesConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=ERP_DB;Trusted_Connection=True;TrustServerCertificate=True",
+    "Redis": "localhost:6379,abortConnect=false"
   },
   "ApiSettings": {
     "JwtOptions": {
