--- a/Services/Companies/Companies.Appilcation/Companies.Appilcation.csproj
+++ b/Services/Companies/Companies.Appilcation/Companies.Appilcation.csproj
@@ -12,10 +12,13 @@
     <PackageReference Include="FluentValidation" Version="11.4.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.4.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\CacheService\CacheService.csproj" />
+    <ProjectReference Include="..\..\..\Shared\Dictionaries\Dictionaries.csproj" />
     <ProjectReference Include="..\Companies.Domain\Companies.Domain.csproj" />
   </ItemGroup>
 
